more has been added

--- a/index.html
+++ b/index.html
@@ -201,7 +201,60 @@
                     Furthermore, I completed a Diploma in Machine Learning with Python from Alison, gaining valuable experience in data analysis, predictive modeling, and AI-driven solutions.<br>  
                     Currently, I am pursuing a Diploma in Computer Science at Kampala International University to deepen my technical expertise and prepare myself for greater challenges in the ever-evolving tech industry.<br>  
                     My commitment to continuous learning and growth drives me to excel in every opportunity I encounter.  
-                </p>                     
+                </p>
+                <div class="resume-list">
+                    <div class="resume-item">
+                        <p class="year">2020 - 2021</p>
+                        <h3>Professional Certificate in Software Engineering (Back-End Engineering)</h3>
+                        <p class="company">African Leadership</p>
+                        <p>I’ve earned a Professional Certificate in Software Engineering (Back-End Engineering), 
+                            which has equipped me with a strong foundation in server-side programming, database management, 
+                            and building scalable applications. This certification has enhanced my ability 
+                            to design and develop robust back-end systems, enabling me to contribute effectively to complex software projects.
+                        </p>
+                    </div>
+                    <div class="resume-item">
+                        <p class="year">2020 - 2021</p>
+                        <h3>Meta Front-End Developer Professional Certificate</h3>
+                        <p class="company">META - COURSERA</p>
+                        <p>I’ve also completed the Meta Front-End Developer Professional Certificate, where I gained comprehensive skills in HTML, CSS, 
+                            JavaScript, and React. This certification has empowered me to build responsive, 
+                            user-friendly interfaces and create dynamic web applications, further enhancing my front-end development expertise.
+                        </p>
+                    </div>
+                    <div class="resume-item">
+                        <p class="year">2022 - 2023</p>
+                        <h3>Google Cybersecurity Professional Certificate</h3>
+                        <p class="company">Google - COURSERA</p>
+                        <p>I’ve completed the Google Cybersecurity Professional Certificate, 
+                            which has provided me with in-depth knowledge of network security, 
+                            threat analysis, and risk management. This certification has equipped me with the skills to safeguard systems, 
+                            identify vulnerabilities, and ensure the integrity of digital environments, 
+                            making me well-prepared to tackle cybersecurity challenges in any organization.
+                        </p>
+                    </div>
+                    <div class="resume-item">
+                        <p class="year">2023 - 2024</p>
+                        <h3>Diploma In Machine Learning with Python</h3>
+                        <p class="company">Alison</p>
+                        <p>I’ve earned a Diploma in Machine Learning with Python from Alison, where I gained practical skills in data analysis, 
+                            machine learning algorithms, and artificial intelligence. 
+                            This certification has equipped me with the knowledge to build predictive models, analyze complex datasets, 
+                            and implement machine learning solutions, 
+                            further enhancing my ability to work with cutting-edge technologies in the field of data science.
+                        </p>
+                    </div>
+                    <div class="resume-item">
+                        <p class="year">2024 - Present</p>
+                        <h3>Diploma In Computer Science</h3>
+                        <p class="company">Kampala International University</p>
+                        <p>I am currently pursuing a Diploma in Computer Science at Kampala International University. 
+                            This program is expanding my knowledge in areas such as software development, data structures, algorithms, and system design. 
+                            It’s equipping me with a solid foundation in computing, 
+                            helping me further hone my skills and stay up-to-date with the latest trends and technologies in the tech industry.
+                        </p>
+                    </div>
+                </div>                
             </div>
             <div class="resume-detail skills">
                 <h2 class="heading">My <span>Skills</span></h2>
