--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <!-- box icons -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
 
     <!-- custom css -->
     <link rel="stylesheet" href="css/styles.css">
@@ -57,7 +59,9 @@
         </div>
         <div class="home-img">
             <div class="img-box">
-                <img src="images/bill3.png">
+                <div class="img-item">
+                    <img src="images/bill3.png">
+                </div>
             </div>
         </div>
     </section>
@@ -258,7 +262,7 @@
                 <h2 class="heading">My <span>Skills</span></h2>
                 <div class="skills-container">
                     <div class="skill-item">
-                        <i class='bx bxl-mysql'></i>
+                        <i class='bx bxs-data' ></i>
                         <span>MySQL</span>
                     </div>
                     <div class="skill-item">
@@ -282,7 +286,7 @@
                         <span>React</span>
                     </div>
                     <div class="skill-item">
-                        <i class='bx bxl-vite'></i>
+                        <i class="fa-brands fa-js"></i>
                         <span>Vite.js</span>
                     </div>
                     <div class="skill-item">
@@ -300,6 +304,42 @@
                     <div class="skill-item">
                         <i class='bx bxl-git'></i>
                         <span>Git</span>
+                    </div>
+                    <div class="skill-item">
+                        <i class='bx bxl-html5'></i>
+                        <span>HTML5</span>
+                    </div>
+                    <div class="skill-item">
+                        <i class='bx bxl-css3'></i>
+                        <span>CSS3</span>
+                    </div>
+                    <div class="skill-item">
+                        <i class='bx bxl-aws'></i>
+                        <span>AWS</span>
+                    </div>
+                    <div class="skill-item">
+                        <i class='bx bxl-bootstrap' ></i>
+                        <span>Bootstrap</span>
+                    </div>
+                    <div class="skill-item">
+                        <i class='bx bxl-adobe' ></i>
+                        <span>Adobe XD</span>
+                    </div>
+                    <div class="skill-item">
+                        <i class='bx bxl-figma' ></i>
+                        <span>Figma</span>
+                    </div>
+                    <div class="skill-item">
+                        <i class="fa-brands fa-linux"></i>
+                        <span>Linux</span>
+                    </div>
+                    <div class="skill-item">
+                        <i class="fa-brands fa-docker"></i>
+                        <span>Docker</span>
+                    </div>
+                    <div class="skill-item">
+                        <i class='bx bxl-typescript' ></i>
+                        <span>Typescript</span>
                     </div>
                     <div class="skill-item">
                         <i class='bx bxl-github'></i>
