more has been added

--- a/index.html
+++ b/index.html
@@ -358,6 +358,10 @@
                         <span>Django</span>
                     </div>
                     <div class="skill-item">
+                        <i class='bx bxl-angular' ></i>
+                        <span>Angular</span>
+                    </div>
+                    <div class="skill-item">
                         <i class='bx bxl-python'></i>
                         <span>Python-Flask</span>
                     </div>
