- Updated index.html to include the image within the home section.

--- a/index.html
+++ b/index.html
@@ -377,6 +377,44 @@
                     Beyond my academic achievements, I am deeply committed to building innovative tech solutions, securing digital spaces, and empowering others through technology.<br>  
                     I believe in continuous learning, resilience, and making a positive impact through my skills and expertise.  
                 </p>
+                <div class="resume-list">
+                    <div class="resume-item">
+                        <p>Name <span>Billbright Matege</span></p>
+                    </div>
+                    <div class="resume-item">
+                        <p>Gender <span>Male</span></p>
+                    </div>
+                    <div class="resume-item">
+                        <p>Age <span>22 Years Old</span></p>
+                    </div>
+                    <div class="resume-item">
+                        <p>Phone <span>+256 700 907 712</span></p>
+                    </div>
+                    <div class="resume-item">
+                        <p>Email <span>billbrightmatege@gmail.com</span></p>
+                    </div>
+                    <div class="resume-item">
+                        <p>Address <span>Kampala, Uganda</span></p>
+                    </div>
+                    <div class="resume-item">
+                        <p>Language <span>English</span></p>
+                    </div>
+                    <div class="resume-item">
+                        <p>Nationality <span>Ugandan</span></p>
+                    </div>
+                    <div class="resume-item">
+                        <p>Experience <span>3+ Years</span></p>
+                    </div>
+                    <div class="resume-item">
+                        <p>Full Time <span>Available</span></p>
+                    </div>
+                    <div class="resume-item">
+                        <p>Part Time <span>Available</span></p>
+                    </div>
+                    <div class="resume-item">
+                        <p>Freelance <span>Available</span></p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
