feat: Ensure image only appears on the home section

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     </section>
     
     <!-- RESUME SESSION end -->
-    <section class="resume active">
+    <section class="resume">
         <div class="resume-container">
             <h2>Why Hire Me</h2>
             <p class="desc">I bring a unique blend of expertise in software engineering, cybersecurity, Back-end and front-end development, paired with hands-on experience in building user-friendly websites and secure systems. My commitment to continuous learning—evidenced by my ongoing pursuit of professional certifications and academic studies—ensures I stay updated with industry trends. Beyond technical skills, I’m a dedicated team player with a passion for delivering innovative solutions that drive results. Partnering with me means working with someone who values integrity, efficiency, and excellence in every project.</p>
@@ -415,6 +415,34 @@
                         <p>Freelance <span>Available</span></p>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- PORTFOLIO SESSION start -->
+    <section class="portfolio active">
+        <h2 class="heading"><span>My</span> Latest <span>Projects</span></h2>
+        <div class="portfolio-contauner">
+            <div class="portfolio-box">
+                <div class="portfolio-details active">
+                    <p class="numb">01</p>
+                </div>
+                <div class="portfolio-details">
+                    <p class="numb">02</p>
+                </div>
+                <div class="portfolio-details">
+                    <p class="numb">03</p>
+                </div>
+                <div class="portfolio-details">
+                    <p class="numb">04</p>
+                </div>
+                <div class="portfolio-details">
+                    <p class="numb">05</p>
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+
             </div>
         </div>
     </section>
