more has been added

--- a/index.html
+++ b/index.html
@@ -422,10 +422,22 @@
     <!-- PORTFOLIO SESSION start -->
     <section class="portfolio active">
         <h2 class="heading"><span>My</span> Latest <span>Projects</span></h2>
-        <div class="portfolio-contauner">
+        <div class="portfolio-container">
             <div class="portfolio-box">
                 <div class="portfolio-details active">
                     <p class="numb">01</p>
+                    <h3>Fitness & Business Blog</h3>
+                    <p>The fitness and health blog offers tips on workouts, nutrition, and wellness, while the business 
+                        blog shares insights on entrepreneurship, productivity, 
+                        and industry trends, empowering readers in both fields
+                    </p>
+                    <div class="tech">
+                        <p>HTML5, CSS3, JavaScript</p>  
+                    </div>
+                    <div class="live-github">
+                        <a href="#"><i class='bx bx-arrow-back'></i><span>Live Project</span></a>
+                        <a href="#"><i class='bx bxl-github'></i><span>GitHub Repository</span></a>
+                    </div>
                 </div>
                 <div class="portfolio-details">
                     <p class="numb">02</p>
