the slider is working as expected

--- a/index.html
+++ b/index.html
@@ -452,9 +452,31 @@
                     <p class="numb">05</p>
                 </div>
             </div>
-
             <div class="portfolio-box">
+                <div class="portfolio-carousel">
+                    <div class="img-slide">
+                        <div class="img-item">
+                            <img src="images/biznessblog.png">
+                        </div>
+                        <div class="img-item">
+                            <img src="images/city.png">
+                        </div>
+                        <div class="img-item">
+                            <img src="images/lighthouse.png">
+                        </div>
+                        <div class="img-item">
+                            <img src="images/Travify.png">
+                        </div>
+                        <div class="img-item">
+                            <img src="images/DataVisualisationSoftware.png">
+                        </div>
+                    </div>
+                </div>
 
+                <div class="navigation">
+                    <button class="arrow-left"><i class='bx bxs-left-arrow' ></i></button>
+                    <button class="arrow-right"><i class='bx bxs-right-arrow' ></i></button>
+                </div>
             </div>
         </div>
     </section>
