--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <!-- SERVICES SESSION start -->
 
-    <section class="services">
+    <section class="services ">
         <h2 class="heading">My <span>Expertize</span></h2>
         <div class="services-container">
             <div class="services-box">
@@ -488,7 +488,9 @@
         <div class="contact-container">
             <div class="contact-box">
                 <h2>Lets Work Together</h2>
-                <p>Have a project in mind or just want to say hi? Feel free to get in touch.</p>
+                <p class="desc">Got an idea for a project or just want to say hello? 
+                    Don’t hesitate to reach out we’d love to hear from you and explore how we can collaborate. 
+                    Let’s start a conversation today! </p>
                 <div class="contact-detail">
                     <div class="detail">
                         <i class='bx bxs-phone-call'></i>
