--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </nav>
     </header>
     <!-- home section end -->
-    <section class="home">
+    <section class="home active">
         <div class="home-detail">
             <h1>Billbright Matege</h1>
             <h2>Skilled In
@@ -61,7 +61,7 @@
         <div class="home-img">
             <div class="img-box">
                 <div class="img-item">
-                    <img src="images/bill3.png">
+                    <img src="images/bill3.png" alt="Billbright Matege">
                 </div>
             </div>
         </div>
@@ -484,7 +484,7 @@
     </section>
 
     <!-- Contact Section -->
-    <section class="Contact active">
+    <section class="Contact">
         <div class="contact-container">
             <div class="contact-box">
                 <h2>Lets Work Together</h2>
