--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <!-- header section start -->
-    <header>
+    <header class="active">
         <a href="#" class="logo">Billbright Matege.</a>
 
         <i class='bx bx-menu' id="menu-icon"></i>
@@ -33,14 +33,28 @@
             <a href="#contact">Contact</a>
         </nav>
     </header>
+
+    <!-- bars background -->
+    <div class="bars-box active">
+        <div class="bar" style="--i:6"></div>
+        <div class="bar" style="--i:5"></div>
+        <div class="bar" style="--i:4"></div>
+        <div class="bar" style="--i:3"></div>
+        <div class="bar" style="--i:2"></div>
+        <div class="bar" style="--i:6"></div>
+    </div>
+
     <!-- home section end -->
     <section class="home active">
         <div class="home-detail">
             <h1>Billbright Matege</h1>
             <h2>Skilled In
-                <span style="--i:4;" data-text="Machine Learning">Machine Learning</span>
-                <span style="--i:3;" data-text="Software Development">Software Engineering</span><br>
-                <span style="--i:2;" data-text="Cybersecurity Analysis">Cybersecurity Analysis</span>
+                <span style="--i:6;" data-text="Machine Learning">Machine Learning</span>
+                <span style="--i:5;" data-text="Software Development">Software Engineering</span>
+                <span style="--i:4;" data-text="Cybersecurity Analysis">Cybersecurity Analysis</span>
+                <span style="--i:3;" data-text="Graphics Designer">Graphics Designer</span>
+                <span style="--i:2;" data-text="Photo Editor">Photo Editor</span>
+                <span style="--i:1;" data-text="UI & UX Designer">UI & UX Designer</span>
             </h2>
             <p>Hi, I'm Billbright Matege, a software engineer and cybersecurity analyst with a passion for<br>
                 developing software solutions that solve real-world problems.I have experience<br>
